data/all_generated_tests/raw_wast_tests/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2096.wast
;; 7. **Test 7: Loop within If-Else Block with External Calls**:    - Description: Include looping constructs within the `else` block of an `if` instruction that call an imported function, with a focus on stack and control management.    - Specific Constraint: Validate consistency and blocktype specifications in the stack during loop iterations and external calls.    - Relation to Control Flow: Tests loops within `else` blocks for proper stack and control handling across module boundaries.

(assert_invalid
  (module
    (func $loop-within-if-else (result i32)
      (if (result i32) (i32.const 0)
        (then (i32.const 10))
        (else 
          (loop (result i32)
            (call $external_func)
            (br_if 0 (i32.const 1))
          )
        )
      )
    )
    (import "env" "external_func" (func $external_func))
  )
  "type mismatch"
)